[gd_scene load_steps=9 format=2]

[ext_resource path="res://mob.gd" type="Script" id=1]
[ext_resource path="res://background/enemies/slimeBlue.png" type="Texture2D" id=2]
[ext_resource path="res://slimeBlue_blue.png" type="Texture2D" id=3]
[ext_resource path="res://background/enemies/slimeBlue_squashed.png" type="Texture2D" id=4]

[sub_resource type="RectangleShape2D" id=1]
size = Vector2( 20, 11 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "squash",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "crawl",
"speed": 3.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 6.08276

[sub_resource type="RectangleShape2D" id=4]
size = Vector2( 25, 10.5 )

[node name="mob" type="CharacterBody2D"]
collision_layer = 24
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 27 )
shape = SubResource( 1 )

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2( 0, 21 )
frames = SubResource( 2 )
animation = "crawl"
playing = true

[node name="top" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="top"]
position = Vector2( 0, 14 )
shape = SubResource( 3 )

[node name="side damage" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="side damage"]
position = Vector2( 0, 20 )
shape = SubResource( 4 )

[node name="floor_checker" type="RayCast2D" parent="."]
position = Vector2( 0, 20 )
enabled = true
target_position = Vector2( 0, 20 )
collision_mask = 32

[connection signal="body_entered" from="top" to="." method="_on_top_body_entered"]
[connection signal="body_entered" from="side damage" to="." method="_on_side_damage_body_entered"]
